--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -31,5 +31,11 @@ import img from '../images/about.webp'
     gap: 1rem;
     padding-right: 5rem;
   }
+
+  @media (max-width: 800px) {
+    section {
+      grid-template-columns: 1fr;
+    }
+  }
 </style>
 
