--- a/src/components/Products.astro
+++ b/src/components/Products.astro
@@ -65,7 +65,7 @@
 
 
 <section id="produits">
-  <article>
+  <article id="barriere-levante">
     <h3>
       BARRIERE LEVANTE TRIPODE ET TOURNIQUET
     </h3>
@@ -85,7 +85,7 @@
   </article>
   
 
-  <article>
+  <article id="motorisation-portail">
     <h3>
     MOTORISATION PORTAIL
   </h3>
@@ -105,7 +105,7 @@
 
     <div>
       </article>
-      <article>
+      <article id="porte-garage">
 
         <h3>
     PORTE DE GARAGE
