--- a/src/components/Quality.astro
+++ b/src/components/Quality.astro
@@ -58,4 +58,16 @@ import QualityCard from "./QualityCard.astro";
    
     /* background-color: red; */
   }
+
+  @media (max-width: 500px) {
+    h2 {
+      width: 100%;
+    }
+  }
+
+  @media (max-width: 450px) {
+    .card-container {
+      grid-template-columns: 1fr;
+    }
+  }
 </style>
