--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,8 @@ import Quality from '@components/Quality.astro'
 import Service from '@components/Service.astro';
 import Conatct from '@components/Conatct.astro';
 
+console.log(Astro.generator)
+
 ---
 
 <Layout title="Yvenoz Services">
