--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,7 +1,8 @@
 ---
 import '../style/global.scss'
-import Nav from '../components/Nav.astro'
+// import Nav from '../components/Nav.astro'
 import Footer from '@components/Footer.astro';
+import Nav from '@components/svelte/Nav.svelte'
 export interface Props {
 	title: string;
 }
@@ -10,18 +11,20 @@ const { title } = Astro.props;
 ---
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="description" content="Astro description">
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
+		<meta name="description" content="Bienvenue sur notre page d’accueil, où nous sommes votre partenaire de confiance dans la fourniture de matériaux d’automatisation pour les portails, portes de garage, ascenseurs, portes piétonnes automatiques et pièces détachées. Découvrez notre large gamme de produits fiables et de haute qualité conçus pour améliorer la commodité, la sécurité et l’efficacité. Que vous soyez propriétaire d’une maison, propriétaire d’une entreprise ou professionnel de l’industrie, nous avons les solutions d’automatisation dont vous avez besoin. Collaborez avec nous et découvrez l’intégration transparente de la technologie de pointe et du savoir-faire supérieur situe a Abidjan Cote d'ivoire">
+
 		<title>{title}</title>
 	</head>
 	<body>
 		<header>
-			<Nav/>
+			<Nav client:load/>
 		</header>
 		<slot />
 		<footer>
