--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -3,7 +3,7 @@ import img from '../images/about.webp'
 ---
 
 <section>
-  <div class="desc">
+  <div class="desc" data-sal="fade-up" data-sal-duration="1500" data-sal-easing="ease-out">
     <p>
       Nos systèmes d’automatisation de portail sont conçus pour rationaliser le contrôle d’accès et fournir une entrée et une sortie transparente pour les espaces résidentiels, commerciaux et industriels.
     </p>
@@ -11,7 +11,7 @@ import img from '../images/about.webp'
       Que vous ayez besoin d’un système robuste pour les opérations à grande échelle ou d’une solution personnalisée pour votre maison, nous offrons un large choix de matériaux d’automatisation de portail fiables et durables.
     </p>
   </div>
-  <div class="img">
+  <div class="img" data-sal="fade-left" data-sal-duarion="1000" data-sal-easing="ease-out">
     <img src={img} alt="ouvrier">
   </div>
 </section>
