--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -9,10 +9,10 @@ import Button from './Button.astro';
 <section id="services">
   <div class="card">
     <div class="desc">
-      <h3>
+      <h3 data-sal="slide-up" data-sal-duration="1500" data-sal-easing="ease-out">
         MOTORISATION <br> PORTAIL
       </h3>
-      <p>
+      <p data-sal="slide-up"data-sal-duration="1000">
         Plus que jamais il est nécessaire de réguler les entrees <br> et sorties de nos parkings  et résidences, YVENOS vous propose des <br> kits de motorisations adaptées à tout type de portes  (battante, coulissantes...)
         </p>
     </div>
@@ -25,20 +25,20 @@ import Button from './Button.astro';
       <img src={img1} alt="Porte de Garage">
     </figure>
     <div class="desc">
-      <h3>
+      <h3  data-sal="slide-up" data-sal-duration="1500"  data-sal-easing="ease-out">
         PORTE GE <br> GARAGE
        </h3>
-       <p>
+       <p data-sal="slide-up" data-sal-duration="1000">
          Nos kits de motorisations sont robustes <br> et s'adapteront entièrement à vos portes <br> de garages qu'elles soient en accordéon ou basculantes <br>
        </p>
     </div>
   </div>
   <div class="card">
     <div class="desc">
-      <h3>
+      <h3 data-sal="slide-up"data-sal-duration="1500"  data-sal-easing="ease-out">
         BARRIERE LEVANTE <br> TRIPODE ET TOURNIQUET
        </h3>
-       <p>
+       <p data-sal="slide-up" data-sal-duration="1000">
          Les barrières automatiques sont un atout majeur <br> dans la gestion du flux de véhicules <br> dans les établissements ou en résidences
          </p>
     </div>
@@ -47,7 +47,7 @@ import Button from './Button.astro';
     </figure>
   </div>
 
-  <div class="text">
+  <div class="text" data-sal="fade" data-sal-duration="900"  data-sal-easing="ease-out">
 		<p>
 			Pour répondre aux besoins en constante évolution de nos clients,  nous priorisons la
 			modernisation de nos offres de produits.
