--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,7 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<meta name="description" content="Bienvenue sur notre page d’accueil, où nous sommes votre partenaire de confiance dans la fourniture de matériaux d’automatisation pour les portails, portes de garage, ascenseurs, portes piétonnes automatiques et pièces détachées. Découvrez notre large gamme de produits fiables et de haute qualité conçus pour améliorer la commodité, la sécurité et l’efficacité. Que vous soyez propriétaire d’une maison, propriétaire d’une entreprise ou professionnel de l’industrie, nous avons les solutions d’automatisation dont vous avez besoin. Collaborez avec nous et découvrez l’intégration transparente de la technologie de pointe et du savoir-faire supérieur situe a Abidjan Cote d'ivoire">
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 		<title>{title}</title>
 	</head>
@@ -31,6 +32,8 @@ const { title } = Astro.props;
 			<Footer/>
 		</footer>
 	</body>
+
+	
 </html>
 <style is:global>
 	header {
