--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,12 +18,22 @@ console.log(Astro.generator)
 	<Quality/>
 	<Logo/>
 	<Service/>
-	<Products/>
+	<Products />
 	<About/>
 	<Conatct/>
 	</main>
+
 </Layout>
+	
+<script >
+	import sal from 'sal.js'
+	// console.log(sal())
+	sal();
+</script>
+
 
 <style>
-	
+	main {
+		overflow-x: hidden;
+	}
 </style>
