--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Palanquin:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Reem+Kufi:wght@600&display=swap');
+@import './node_modules/sal.js/dist/sal.css';
 
 *, ::before, ::after {
   margin: 0;
@@ -32,6 +33,7 @@ body {
   background-color: var(--secondary);
   font-family: var(--para);
   color: var(--primary);
+  // overflow-x: hidden;
 }
 
 main {
