--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -7,36 +7,37 @@ import img4 from '../images/hero-img-4.webp'
  let bigText = `Expérience de contrôle transparent
  avec nos solutions d’automatisation`.split(' ')
 
- const imgs = ['../images/hero-img-1.avif','../images/hero-img-2.avif','../images/hero-img-3.avif','../images/hero-img-4.avif',]
 ---
 
 <section id="accueil">
 
   <h1>
-    {bigText.map((letter) => (
-      <span>{letter + ' '}</span>
+    {bigText.map((letter, idx) => (
+      <span data-sal="slide-up" data-sal-duration="1000" data-sal-delay={100 * (idx + 1)}>{letter + ' '}</span>
     ))
     }
   </h1>
-  <p>
+  <p data-sal="zoom-in" data-sal-duration="1200" >
     Votre partenaire en materiels d'automatismes pour portail, <br> porte de garage, barriere levante de parking, porte <br> automatique pietonne et pieces detachees
   </p> 
 
-  <Button>
-
-  </Button>
+  <div data-sal="slide-left" data-sal-duration="1400">
+    <Button>
+  
+    </Button>
+    </div>
 </section>
 <div class="hero-img">
-  <figure>
+  <figure data-sal="slide-up" data-sal-delay="100" data-sal-duration="800">
     <img src={img1} alt="Porte automatique">
   </figure>
-  <figure>
+  <figure data-sal="slide-up" data-sal-delay="200" data-sal-duration="800">
     <img src={img2} alt="Porte automatique">
   </figure>
-  <figure>
+  <figure data-sal="slide-up" data-sal-delay="300" data-sal-duration="800">
     <img src={img3} alt="Porte automatique">
   </figure>
-  <figure>
+  <figure data-sal="slide-up" data-sal-delay="400" data-sal-duration="800">
     <img src={img4} alt="Porte automatique">
   </figure>
 </div>
@@ -62,6 +63,12 @@ import img4 from '../images/hero-img-4.webp'
     font-family: var(--big-text);
     text-transform: uppercase;
     line-height: 1;
+    display:flex;
+    flex-wrap: wrap;
+  }
+
+  span {
+    display:block;
   }
 
   p {
