--- a/src/components/Service.astro
+++ b/src/components/Service.astro
@@ -57,9 +57,10 @@ import Button from './Button.astro';
 			technologiques et des tendances du marché, ce qui nous permet d’intégrer des
 			fonctionnalités de pointe dans nos matériaux d’automatisation
 		</p>
-    <Button>
-
-    </Button>
+    <a href="/#contacts">
+      <Button>
+      </Button>
+    </a>
 	</div>
   
 </section>
