--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,9 +22,10 @@ import img4 from '../images/hero-img-4.webp'
   </p> 
 
   <div data-sal="slide-left" data-sal-duration="1400">
-    <Button>
-  
-    </Button>
+    <a href="/#contacts">
+      <Button>
+      </Button>
+    </a>
     </div>
 </section>
 <div class="hero-img">
