add space in hero text

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -13,7 +13,7 @@ import img4 from '../images/hero-img-4.webp'
 
   <h1>
     {bigText.map((letter, idx) => (
-      <span data-sal="slide-up" data-sal-duration="1000" data-sal-delay={100 * (idx + 1)}>{letter + ' '}</span>
+      <span data-sal="slide-up" data-sal-duration="1000" data-sal-delay={100 * (idx + 1)}>{letter}&nbsp;</span>
     ))
     }
   </h1>
